# vfxDesktop

./: CMakeLists.txt  README.md  package.py  pyproject.toml
cmake/: compileUiHelper.cmake
python/vfxDesktop/: launcher.py
python/vfxDesktop/ui/: __init__.py  desktop_window.py
python/vfxDesktop/ui/widgets/: __init__.py  stackedwidget.py
resources/ui/: desktop_window.ui  main_window.ui
